--- a/NewsPagesServerLib/NewsPagesServerLib.csproj
+++ b/NewsPagesServerLib/NewsPagesServerLib.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abot" Version="2.0.70" />
     <PackageReference Include="ServiceStack.OrmLite" Version="6.0.2" />
     <PackageReference Include="ServiceStack.OrmLite.PostgreSQL" Version="6.0.2" />
   </ItemGroup>
