--- a/NewsPagesClientApp/NewsPagesClientApp.csproj
+++ b/NewsPagesClientApp/NewsPagesClientApp.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>909dea02-cfd5-4c02-99d9-462c15fd18b4</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
