--- a/AngularClient/Dockerfile
+++ b/AngularClient/Dockerfile
@@ -1,9 +1,12 @@
-FROM node:16.14-alpine AS client
-EXPOSE 4200 62387
-USER node
-RUN mkdir /home/node/.npm-global
-ENV PATH=/home/node/.npm-global/bin:$PATH
-ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
-RUN npm install -g @angular/cli@13.2.5
-WORKDIR /app
-CMD ["ng", "serve", "--port", "4200", "--host", "0.0.0.0", "--disable-host-check", "--poll", "2000"]
+FROM node:alpine
+EXPOSE 4200
+#WORKDIR /app
+
+WORKDIR /dist/src/app
+COPY AngularClient/package*.json ./
+COPY AngularClient/. .
+RUN npm install
+RUN npm install -g @angular/cli
+CMD ["ng", "serve", "--port", "4200",  "--host=0.0.0.0"]
+
+
