--- a/NewsPagesClientApp/NewsPagesClientApp.csproj
+++ b/NewsPagesClientApp/NewsPagesClientApp.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Abot" Version="2.0.70" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.25" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
