--- a/NewsPagesLib/NewsPagesLib.csproj
+++ b/NewsPagesLib/NewsPagesLib.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <Reference Include="Pullenti.Net">
-      <HintPath>..\..\..\PullentiCSharp\Pullenti\bin\Debug\Pullenti.Net.dll</HintPath>
+      <HintPath>Pullenti.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
 
